--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -101,7 +101,7 @@
                             </div>
                         <label for="backups_enable"/>
                         <div class="oe_inline">
-                            <field name="backups_enable"/><button class="oe_read_only oe_link" type="object" name="config_backups" states="active" string="Config Backups"/>
+                            <field name="backups_enable"/><button class="oe_read_only oe_link" type="object" name="config_backups" attrs="{'invisible':['|',('state','!=','active'),('backups_enable','=',False)]}" string="Config Backups"/>
                         </div>
                         <label string=""/>
                         <div attrs="{'invisible':[('backups_enable','=',False)]}">
